data/cloudformation_collected_templates_new/template_05448_cf-example-7.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Deploy a VPC with 2 AZ, IGW, Web, PhP, ALB, ASG, and RDS.
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: VPC Configuration Parameters
        Parameters:
          - pmVpcId
          - pmVpcRegion
          - pmAz1
          - pmAz2
          - pmVpcCidr
          - pmPubSubnetCidr1
          - pmPubSubnetCidr2
          - pmPriSubnetCidr1
          - pmPriSubnetCidr2
      - Label:
          default: WebServer/EC2 Configuration Parameters
        Parameters:
          - pmWebServerImageId
          - pmWebServerInstanceType
          - pmWebServerVolumeSize
          - pmWebServerCapacity
          - pmWebServerAccessKeyId
      - Label:
          default: RDS/MySQL Configuration Parameters
        Parameters:
          - pmDBInstanceName
          - pmDBInstanceClass
          - pmDBStorage
          - pmDBMultiAz
          - pmDBName
          - pmDBUsername
          - pmDBPassword
    ParameterLabels:
      pmVpcId:
        default: Enter VPC id
      pmVpcCidr:
        default: Enter VPC CIDR
      pmVpcRegion:
        default: Enter VPC region
      pmAz1:
        default: Enter VPC AZ1
      pmAz2:
        default: Enter VPC AZ2
      pmPubSubnetCidr1:
        default: Enter VPC public subnet1
      pmPubSubnetCidr2:
        default: Enter VPC public subnet2
      pmPriSubnetCidr1:
        default: Enter VPC private subnet1
      pmPriSubnetCidr2:
        default: Enter VPC private subnet2
      pmWebServerImageId:
        default: Enter EC2 image id
      pmWebServerInstanceType:
        default: Enter EC2 instance type
      pmWebServerVolumeSize:
        default: Enter EC2 volume size
      pmWebServerCapacity:
        default: Enter EC2 capacity
      pmWebServerAccessKeyId:
        default: Enter EC2 SSH access key
      pmDBInstanceName:
        default: Enter DB instance name
      pmDBInstanceClass:
        default: Enter DB instance class
      pmDBStorage:
        default: Enter DB storage size
      pmDBMultiAz:
        default: Enter DB Multi AZ support
      pmDBName:
        default: Enter DB name
      pmDBUsername:
        default: Enter DB username
      pmDBPassword:
        default: Enter DB password
Parameters:
  pmVpcId:
    Type: String
    Default: POC
  pmVpcRegion:
    Type: String
    Default: us-east-1
  pmVpcCidr:
    Type: String
    Default: 10.0.0.0/16
  pmPubSubnetCidr1:
    Type: String
    Default: 10.0.10.0/24
  pmPubSubnetCidr2:
    Type: String
    Default: 10.0.20.0/24
  pmPriSubnetCidr1:
    Type: String
    Default: 10.0.50.0/24
  pmPriSubnetCidr2:
    Type: String
    Default: 10.0.60.0/24
  pmAz1:
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-1a
  pmAz2:
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-1b
  pmWebServerImageId:
    Type: String
    Default: ami-28456852
    AllowedValues:
      - ami-28456852
      - ami-eca289fb
      - ami-446f3521
    ConstraintDescription: Must be a valid web server EC2 image id
  pmWebServerInstanceType:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
    ConstraintDescription: Must be a valid web server EC2 instance type
  pmWebServerVolumeSize:
    Type: Number
    Default: '10'
    MinValue: '5'
    MaxValue: '1024'
    ConstraintDescription: Must be between 5 and 1024 Gb
  pmWebServerCapacity:
    Type: Number
    Default: '1'
    MinValue: '1'
    MaxValue: '4'
    ConstraintDescription: Must be between 1 and 4 web server EC2 instances.
  pmWebServerAccessKeyId:
    Type: AWS::EC2::KeyPair::KeyName
    Default: aws_cory1
  pmDBInstanceName:
    Type: String
    Default: POCDB
  pmDBInstanceClass:
    Type: String
    Default: db.m1.small
  pmDBStorage:
    Type: String
    Default: '5'
  pmDBMultiAz:
    Type: String
    Default: 'false'
  pmDBName:
    Type: String
    Default: information_schema
  pmDBUsername:
    Type: String
    Default: root
  pmDBPassword:
    Type: String
    Default: r00t1234!
Mappings: {}
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref 'pmVpcCidr'
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: !Ref 'pmVpcId'
  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join
            - '|'
            - - !Ref 'pmVpcId'
              - IGW
  IGWAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'VPC'
      InternetGatewayId: !Ref 'IGW'
    DependsOn:
      - VPC
      - IGW
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'pmPubSubnetCidr1'
      AvailabilityZone: !Ref 'pmAz1'
      Tags:
        - Key: Type
          Value: Public
        - Key: Name
          Value: !Join
            - '|'
            - - !Ref 'pmPubSubnetCidr1'
              - !Ref 'pmAz1'
    DependsOn: VPC
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'pmPriSubnetCidr1'
      AvailabilityZone: !Ref 'pmAz1'
      Tags:
        - Key: Type
          Value: Private
        - Key: Name
          Value: !Join
            - '|'
            - - !Ref 'pmPriSubnetCidr1'
              - !Ref 'pmAz1'
    DependsOn: VPC
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'pmPubSubnetCidr2'
      AvailabilityZone: !Ref 'pmAz2'
      Tags:
        - Key: Type
          Value: Public
        - Key: Name
          Value: !Join
            - '|'
            - - !Ref 'pmPubSubnetCidr2'
              - !Ref 'pmAz2'
    DependsOn: VPC
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'pmPriSubnetCidr2'
      AvailabilityZone: !Ref 'pmAz2'
      Tags:
        - Key: Type
          Value: Private
        - Key: Name
          Value: !Join
            - '|'
            - - !Ref 'pmPriSubnetCidr2'
              - !Ref 'pmAz2'
    DependsOn: VPC
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: Public Route Table
    DependsOn: VPC
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'IGW'
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnet1'
      RouteTableId: !Ref 'PublicRouteTable'
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnet2'
      RouteTableId: !Ref 'PublicRouteTable'
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: Private Route Table
    DependsOn: VPC
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet1'
      RouteTableId: !Ref 'PrivateRouteTable'
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet2'
      RouteTableId: !Ref 'PrivateRouteTable'
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: RDS Subnets Group
      SubnetIds:
        - !Ref 'PrivateSubnet1'
        - !Ref 'PrivateSubnet2'
    DependsOn: VPC
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref 'VPC'
      GroupName: ELB-SG
      GroupDescription: Enable HTTP traffic
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: ELB-SG
    DependsOn: VPC
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: WEB-SG
      GroupDescription: Enable HTTP traffic from ELB to Web Server
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          SourceSecurityGroupId: !Ref 'ALBSecurityGroup'
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: WEB-SG
    DependsOn: VPC
  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: DB-SG
      GroupDescription: Allow Traffic from Web Server
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3306'
          ToPort: '3306'
          SourceSecurityGroupId: !Ref 'WebServerSecurityGroup'
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          SourceSecurityGroupId: !Ref 'WebServerSecurityGroup'
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: DB-SG
    DependsOn:
      - VPC
  DB:
    Type: AWS::RDS::DBInstance
    Properties:
      DBSubnetGroupName: !Ref 'DBSubnetGroup'
      AllocatedStorage: !Ref 'pmDBStorage'
      DBInstanceIdentifier: !Ref 'pmDBInstanceName'
      DBInstanceClass: !Ref 'pmDBInstanceClass'
      DBName: !Ref 'pmDBName'
      MasterUsername: !Ref 'pmDBUsername'
      MasterUserPassword: !Ref 'pmDBPassword'
      Engine: MySQL
      EngineVersion: '5.5'
      MultiAZ: !Ref 'pmDBMultiAz'
      VPCSecurityGroups:
        - !GetAtt 'DBSecurityGroup.GroupId'
    DeletionPolicy: Delete
  WebServerInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref 'WebServerInstanceRole'
  WebServerInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: POC-ACCESS
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: ''
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEC2FullAccess
        - arn:aws:iam::aws:policy/AmazonS3FullAccess
        - arn:aws:iam::aws:policy/AWSLambdaFullAccess
        - arn:aws:iam::aws:policy/AmazonSSMFullAccess
        - arn:aws:iam::aws:policy/IAMReadOnlyAccess
  ASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones:
        - !Ref 'pmAz1'
        - !Ref 'pmAz2'
      VPCZoneIdentifier:
        - !Ref 'PublicSubnet1'
        - !Ref 'PublicSubnet2'
      LaunchConfigurationName: !Ref 'LaunchConfig'
      MinSize: '1'
      MaxSize: '4'
      Cooldown: '30'
      DesiredCapacity: !Ref 'pmWebServerCapacity'
      TargetGroupARNs:
        - !Ref 'ALBTargetGroup'
      Tags:
        - Key: Name
          Value: WEB-ASG
          PropagateAtLaunch: 'true'
    CreationPolicy:
      ResourceSignal:
        Timeout: PT15M
        Count: !Ref 'pmWebServerCapacity'
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MinSuccessfulInstancesPercent: '100'
        MinInstancesInService: '1'
        MaxBatchSize: '1'
        PauseTime: PT15M
        WaitOnResourceSignals: 'true'
  LaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          InstallAndRun:
            - Install
        Install:
          packages:
            yum:
              telnet: []
              httpd: []
              php: []
              php-mysql: []
              mysql: []
          files:
            /var/www/html/index.php:
              content: !Join
                - ''
                - - "<html>\n"
                  - "  <head>\n"
                  - "    <title>AWS CloudFormation LAMP Stack PHP Sample</title>\n"
                  - "    <meta http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\">\n"
                  - "  </head>\n"
                  - "  <body>\n"
                  - "    <h1>Welcome to the AWS CloudFormation LAMP Stack PHP Sample</h1>\n"
                  - "    <p/>\n"
                  - "    <?php\n"
                  - "      // Printthe current data and time\n"
                  - "      print \"The Current Date and Time is: <br/>\";\n"
                  - "      print date(\"g:i A l, F j Y.\");\n"
                  - "    ?>\n"
                  - "    <p/>\n"
                  - "    <?php\n"
                  - "      // Setup a handle for CURL\n"
                  - "      $curl_handle=curl_init();\n"
                  - "      curl_setopt($curl_handle,CURLOPT_CONNECTTIMEOUT,2);\n"
                  - "      curl_setopt($curl_handle,CURLOPT_RETURNTRANSFER,1);\n"
                  - "      // Get the hostname of the intance from the instance metadata\n"
                  - "      curl_setopt($curl_handle,CURLOPT_URL,'http://169.254.169.254/latest/meta-data/public-hostname');\n"
                  - "      $hostname = curl_exec($curl_handle);\n"
                  - "      if (empty($hostname))\n"
                  - "      {\n"
                  - "        print \"Sorry, for some reason, we got no hostname back <br/>\";\n"
                  - "      }\n"
                  - "      else\n"
                  - "      {\n"
                  - "        print \"Server = \" . $hostname . \"<br/>\";\n"
                  - "      }\n"
                  - "      // Get the instance-id of the intance from the instance metadata\n"
                  - "      curl_setopt($curl_handle,CURLOPT_URL,'http://169.254.169.254/latest/meta-data/instance-id');\n"
                  - "      $instanceid = curl_exec($curl_handle);\n"
                  - "      if (empty($instanceid))\n"
                  - "      {\n"
                  - "        print \"Sorry, for some reason, we got no instance id back<br/>\";\n"
                  - "      }\n"
                  - "      else\n"
                  - "      {\n"
                  - "        print \"EC2 instance-id = \" . $instanceid . \"<br/>\";\n"
                  - "      }\n"
                  - '      $DBHost     = "'
                  - !GetAtt 'DB.Endpoint.Address'
                  - "\";\n"
                  - '      $DBName     = "'
                  - !Ref 'pmDBName'
                  - "\";\n"
                  - '      $DBUser     = "'
                  - !Ref 'pmDBUsername'
                  - "\";\n"
                  - '      $DBPassword = "'
                  - !Ref 'pmDBPassword'
                  - "\";\n"
                  - "      print \"DBHost = \" . $DBHost . \"<br/>\";\n"
                  - "      print \"DBName = \" . $DBName . \"<br/>\";\n"
                  - "      $dbconnection = mysqli_connect($DBHost, $DBUser, $DBPassword, $DBName)\n"
                  - "                   or die(\"Could not connect: \" . mysqli_connect_error());\n"
                  - "      print (\"Connected to $DBName and $DBHost successfully\");\n"
                  - "      mysqli_close($dbconnection);\n"
                  - "    ?>\n"
                  - "    <h2>PHP Information</h2>\n"
                  - "    <p/>\n"
                  - "    <?php\n"
                  - "      phpinfo();\n"
                  - "    ?>\n"
                  - "  </body>\n"
                  - "</html>\n"
              mode: '000600'
              owner: apache
              group: apache
            /etc/cfn/cfn-hup.conf:
              content: !Join
                - ''
                - - "[main]\n"
                  - stack=
                  - !Ref 'AWS::StackName'
                  - "\n"
                  - region=
                  - !Ref 'pmVpcRegion'
                  - "\n"
                  - "interval=1\n"
              mode: '000400'
              owner: root
              group: root
            /etc/cfn/hooks.d/cfn-auto-reloader.conf:
              content: !Join
                - ''
                - - "[cfn-auto-reloader-hook]\n"
                  - "triggers=post.update\n"
                  - "path=Resources.LaunchConfig.Metadata.AWS::CloudFormation::Init\n"
                  - 'action=/opt/aws/bin/cfn-init -v '
                  - '         --stack '
                  - !Ref 'AWS::StackName'
                  - '         --resource LaunchConfig '
                  - '         --configsets InstallAndRun '
                  - '         --region '
                  - !Ref 'pmVpcRegion'
                  - "\n"
                  - "runas=root\n"
              mode: '000400'
              owner: root
              group: root
          services:
            sysvinit:
              httpd:
                enabled: 'true'
                ensureRunning: 'true'
              cfn-hup:
                enabled: 'true'
                ensureRunning: 'true'
                files:
                  - /etc/cfn/cfn-hup.conf
                  - /etc/cfn/hooks.d/cfn-auto-reloader.conf
        Configure: {}
    Properties:
      IamInstanceProfile: !Ref 'WebServerInstanceProfile'
      ImageId: !Ref 'pmWebServerImageId'
      InstanceType: !Ref 'pmWebServerInstanceType'
      SecurityGroups:
        - !Ref 'WebServerSecurityGroup'
      AssociatePublicIpAddress: 'true'
      KeyName: !Ref 'pmWebServerAccessKeyId'
      UserData: !Base64
        Fn::Join:
          - ''
          - - "#!/bin/bash -xe\n"
            - "yum update -y\n"
            - "yum install -y aws-cfn-bootstrap aws-cli unzip tree\n"
            - '/opt/aws/bin/cfn-init -v '
            - '         --stack '
            - !Ref 'AWS::StackName'
            - '         --resource LaunchConfig '
            - '         --configsets InstallAndRun '
            - '         --region '
            - !Ref 'pmVpcRegion'
            - "\n"
            - '/opt/aws/bin/cfn-signal -e $? '
            - '         --stack '
            - !Ref 'AWS::StackName'
            - '         --resource ASG '
            - '         --region '
            - !Ref 'pmVpcRegion'
            - "\n"
            - "yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_386/amazon-ssm-agent.rpm\n"
            - "start amazon-ssm-agent\n"
  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      HealthCheckPath: /index.php
      HealthCheckPort: 80
      Name: Apache
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 5
      VpcId: !Ref 'VPC'
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: POC-ALB
      Scheme: internet-facing
      SecurityGroups:
        - !Ref 'ALBSecurityGroup'
      Subnets:
        - !Ref 'PublicSubnet1'
        - !Ref 'PublicSubnet2'
      Tags:
        - Key: Name
          Value: POC-ALB
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref 'ALBTargetGroup'
      LoadBalancerArn: !Ref 'ALB'
      Port: '80'
      Protocol: HTTP
  ALBListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
        - Type: forward
          TargetGroupArn: !Ref 'ALBTargetGroup'
      Conditions:
        - Field: path-pattern
          Values:
            - /index.php
      ListenerArn: !Ref 'ALBListener'
      Priority: 1
Outputs:
  VPC:
    Value: !Ref 'VPC'
  IGW:
    Value: !Ref 'IGW'
  ALBURL:
    Value: !Join
      - ''
      - - http://
        - !GetAtt 'ALB.DNSName'
  DBHost:
    Value: !GetAtt 'DB.Endpoint.Address'
